log file ahora
Android Bundling failed 7998ms node_modules\expo-router\entry.js (1199 modules)
 ERROR  SyntaxError: C:\Users\micro\appStream2\app\player.tsx: Identifier 'formatClock' has already been declared. (419:6)      

  417 | }
  418 |
> 419 | const formatClock = (seconds: number) => {
      |       ^
  420 |   const total = Math.max(0, Math.floor(seconds));
  421 |   const hours = Math.floor(total / 3600);
  422 |   const minutes = Math.floor((total % 3600) / 60);
    at toParseError (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parse-error.ts:95:45)
    at TypeScriptParserMixin.raise (C:\Users\micro\appStream2\node_modules\@babel\parser\src\tokenizer\index.ts:1504:19)        
    at TypeScriptScopeHandler.checkRedeclarationInScope (C:\Users\micro\appStream2\node_modules\@babel\parser\src\util\scope.ts:164:19)
    at TypeScriptScopeHandler.declareName (C:\Users\micro\appStream2\node_modules\@babel\parser\src\util\scope.ts:118:12)       
    at TypeScriptScopeHandler.declareName (C:\Users\micro\appStream2\node_modules\@babel\parser\src\plugins\typescript\scope.ts:89:11)
    at TypeScriptParserMixin.declareNameFromIdentifier (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\lval.ts:876:16)
    at TypeScriptParserMixin.checkIdentifier (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\lval.ts:871:12)   
    at TypeScriptParserMixin.checkLVal (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\lval.ts:763:12)
    at TypeScriptParserMixin.parseVarId (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\statement.ts:1633:10)  
    at TypeScriptParserMixin.parseVarId (C:\Users\micro\appStream2\node_modules\@babel\parser\src\plugins\typescript\index.ts:3700:13)
    at TypeScriptParserMixin.parseVar (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\statement.ts:1582:12)    
    at TypeScriptParserMixin.parseVarStatement (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\statement.ts:1251:10)
    at TypeScriptParserMixin.parseVarStatement (C:\Users\micro\appStream2\node_modules\@babel\parser\src\plugins\typescript\index.ts:3085:33)
    at TypeScriptParserMixin.parseStatementContent (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\statement.ts:612:21)
    at TypeScriptParserMixin.parseStatementContent (C:\Users\micro\appStream2\node_modules\@babel\parser\src\plugins\typescript\index.ts:3220:20)
    at TypeScriptParserMixin.parseStatementLike (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\statement.ts:482:17)
    at TypeScriptParserMixin.parseModuleItem (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\statement.ts:419:17)
    at TypeScriptParserMixin.parseBlockOrModuleBlockBody (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\statement.ts:1443:16)
    at TypeScriptParserMixin.parseBlockBody (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\statement.ts:1417:10)
    at TypeScriptParserMixin.parseProgram (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\statement.ts:229:10) 
    at TypeScriptParserMixin.parseTopLevel (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\statement.ts:203:25)    at TypeScriptParserMixin.parse (C:\Users\micro\appStream2\node_modules\@babel\parser\src\parser\index.ts:83:25)
    at TypeScriptParserMixin.parse (C:\Users\micro\appStream2\node_modules\@babel\parser\src\plugins\typescript\index.ts:4354:20)
    at parse (C:\Users\micro\appStream2\node_modules\@babel\parser\src\index.ts:54:26)
    at parser (C:\Users\micro\appStream2\node_modules\@babel\core\src\parser\index.ts:29:19)
    at parser.next (<anonymous>)
    at normalizeFile (C:\Users\micro\appStream2\node_modules\@babel\core\src\transformation\normalize-file.ts:50:24)
    at normalizeFile.next (<anonymous>)
    at run (C:\Users\micro\appStream2\node_modules\@babel\core\src\transformation\index.ts:41:36)
    at run.next (<anonymous>)
    at transform (C:\Users\micro\appStream2\node_modules\@babel\core\src\transform.ts:29:20)
    at transform.next (<anonymous>)
    at evaluateSync (C:\Users\micro\appStream2\node_modules\gensync\index.js:251:28)
    at fn (C:\Users\micro\appStream2\node_modules\gensync\index.js:89:14)
    at stopHiding - secret - don't use this - v1 (C:\Users\micro\appStream2\node_modules\@babel\core\src\errors\rewrite-stack-trace.ts:99:14)
    at Object.transformSync (C:\Users\micro\appStream2\node_modules\@babel\core\src\transform.ts:66:52)
    at parseWithBabel (C:\Users\micro\appStream2\node_modules\@expo\metro-config\src\transformSync.ts:54:16)
    at transformSync (C:\Users\micro\appStream2\node_modules\@expo\metro-config\src\transformSync.ts:27:12)
    at Object.transform (C:\Users\micro\appStream2\node_modules\@expo\metro-config\src\babel-transformer.ts:197:33)
    at transformJSWithBabel (C:\Users\micro\appStream2\node_modules\@expo\metro-config\src\transform-worker\metro-transform-worker.ts:622:45)
    at Object.transform (C:\Users\micro\appStream2\node_modules\@expo\metro-config\src\transform-worker\metro-transform-worker.ts:774:10)
    at Object.transform (C:\Users\micro\appStream2\node_modules\@expo\metro-config\src\transform-worker\transform-worker.ts:205:17)
    at transformFile (C:\Users\micro\appStream2\node_modules\metro\src\DeltaBundler\Worker.flow.js:67:36)
    at Object.transform (C:\Users\micro\appStream2\node_modules\metro\src\DeltaBundler\Worker.flow.js:42:10)
    at WorkerFarm.transform (C:\Users\micro\appStream2\node_modules\metro\src\DeltaBundler\WorkerFarm.js:44:39)
    at Transformer.transformFile (C:\Users\micro\appStream2\node_modules\metro\src\DeltaBundler\Transformer.js:124:32)
    at Object.transform (C:\Users\micro\appStream2\node_modules\metro\src\lib\transformHelpers.js:137:12)
    at transform (C:\Users\micro\appStream2\node_modules\metro\src\DeltaBundler\Graph.js:170:26)
    at visit (C:\Users\micro\appStream2\node_modules\metro\src\DeltaBundler\buildSubgraph.js:80:29)
    at async Promise.all (index 14)
